--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -229,3 +229,12 @@
     letter-spacing: var(--tracking-normal);
   }
 }
+
+@layer utilities {
+  .auth-layout {
+    @apply flex justify-center items-center min-h-screen;
+  }
+  .auth-link {
+    @apply relative font-medium after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-primary after:transition-all after:duration-500 after:ease-in-out hover:after:w-full text-primary;
+  }
+}
