--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,9 @@
   --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
   --tracking-normal: 0em;
   --spacing: 0.25rem;
+  --text-gradient-start: oklch(0.4341 0.0392 41.9938); /* primary */
+  --text-gradient-via: oklch(0.92 0.0651 74.3695); /* secondary */
+  --text-gradient-end: oklch(59.825% 0.23405 25.54); /* muted-foreground */
 }
 
 /* .dark {
@@ -165,6 +168,10 @@
   --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
     0 8px 10px -1px hsl(0 0% 0% / 0.1);
   --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+
+  --text-gradient-start: oklch(0.6724 0.1308 38.7559); /* primary dark */
+  --text-gradient-via: oklch(0.9818 0.0054 95.0986); /* secondary dark */
+  --text-gradient-end: oklch(0.9521 0 0); /* accent dark */
 }
 
 @theme inline {
@@ -237,4 +244,40 @@
   .auth-link {
     @apply relative font-medium after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-primary after:transition-all after:duration-500 after:ease-in-out hover:after:w-full text-primary;
   }
+  .text-gradient {
+    @apply text-2xl font-bold bg-clip-text text-transparent;
+    background-image: linear-gradient(
+      to right,
+      var(--text-gradient-start),
+      var(--text-gradient-via),
+      var(--text-gradient-end)
+    );
+  }
+}
+
+/* .text-gradient {
+  background-image: linear-gradient(
+    var(--text-gradient-angle),
+    var(--text-gradient-start),
+    var(--text-gradient-end)
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
+
+} */
+
+.text-gradient-vertical {
+  --text-gradient-angle: 180deg;
+}
+
+.text-gradient-primary {
+  --text-gradient-start: var(--primary);
+  --text-gradient-end: var(--primary-foreground);
+}
+
+.text-gradient-accent {
+  --text-gradient-start: var(--accent);
+  --text-gradient-end: var(--secondary);
 }
