--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,8 @@
   --popover: oklch(0.9911 0 0);
   --popover-foreground: oklch(0.2435 0 0);
 
+  --color-primary: #ff014f;
+
   /* primary (e.g: button) */
   --primary: oklch(0.4341 0.0392 41.9938);
   --primary-foreground: oklch(1 0 0);
@@ -36,7 +38,7 @@
   --radius: 0.5rem;
 
   /* Sidebar background color */
-  --sidebar: oklch(1 0 0);
+  --sidebar: oklch(0.9881 0 0);
   /* Sidebar text color */
   --sidebar-foreground: oklch(0.2645 0 0);
   --sidebar-primary: oklch(0.325 0 0);
@@ -74,6 +76,9 @@
     0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 8px 10px -1px hsl(0 0% 0% / 0.1);
   --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
   --tracking-normal: 0em;
+
+  --inner-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset,
+                  -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
 }
 
 .dark {
@@ -121,6 +126,8 @@
   --sidebar-accent-foreground: oklch(0.9674 0.0013 286.3752);
   --sidebar-border: oklch(0.2739 0.0055 286.0326);
   --sidebar-ring: oklch(0.8711 0.0055 286.286);
+
+  --sidebar-gradiant: ,
   --font-sans:
     ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
@@ -149,6 +156,22 @@
   --shadow-xl:
     0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 8px 10px -1px hsl(0 0% 0% / 0.1);
   --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+
+   --inner-shadow: 1px 4px 2px -3px rgba(255, 255, 255, 0.08) inset,
+    -1px -3px 3px -2px rgba(0, 0, 0, 0.3) inset;
+  
+    /* new colors */
+
+  --dark-bg: #10121a;
+  --dark-secondary: #1b1c2c;
+  --dark-surface: #1e1f33;
+  --dark-card: #262732;
+  --text-high: #e5e7eb;
+  --text-medium: #9ca3af;
+  --accent-blue: #2563eb;
+  --accent-blue-hover: #1d4ed8;
+  --border-dark: #2c2e3e;
+  --overlay-dark: rgba(0, 0, 0, 0.5);
 }
 
 @theme inline {
@@ -235,6 +258,11 @@
 }
 
 @layer utilities {
+ 
+  /* .card-inside {
+    @apply bg-gradient-to-br from-[#FCFCFC] via-[#F6F6F8] to-[#ECECEE]
+           dark:from-[#0F2027] dark:via-[#203A43] dark:to-[#2C5364];
+  } */
   .auth-layout {
     @apply flex justify-center items-center min-h-screen;
   }
